# CompMath

./: .gitignore  README.md
Pactice4/: Temp.py
Practice1/: CMakeLists.txt
Practice1/python/: I.8.19.py  IV.12.7b.py  VI.9.32.py  baseData.csv
Practice1/tasks/: CMakeLists.txt  IV.12.7b.cpp  T1.cpp  T2.cpp  VI.9.32.cpp  test.cpp
Practice1/tasks/interpolators/: newton.hpp  spline.hpp
Practice1/tasks/output/: out.csv  outSpline.csv
Practice2/: CMakeLists.txt  Untitled-1.nb
Practice2/python/: T3.py  T4.py  T5.py  X93.py  XI93.py
Practice2/tasks/: CMakeLists.txt  RungeKutta.hpp  T3.cpp  T4Linearize.cpp  T4Shooting.cpp  T5.cpp  X.9.3.cpp  XI.9.3.cpp
Practice3/: CMakeLists.txt
Practice3/python/: Riman.py  XIV.py  convPlot.py  convTest.py
Practice3/tasks/: CMakeLists.txt  RIMAN_1.cpp  XIV.10.2a.cpp  XIV.10.2aConv.cpp  XIV.10.2b.cpp  XIV.10.2bConv.cpp
Practice4/: CMakeLists.txt
Practice4/python/: RimanHLL.py  RimanHLLCompare.py  plotter1.py  plotter2.py  plotter2heatErr.py
Practice4/tasks/: CMakeLists.txt  HLL.cpp  HLLc.cpp  filtering.cpp  heat.cpp
